@@ -83,6 +83,8 @@ Functions provided:
    :meth:`__exit__` methods should avoid raising exceptions, and in particular they
    should not re-raise a passed-in exception.
 
+   .. deprecated:: 2.7
+      The with-statement now supports this functionality directly.
 
 .. function:: closing(thing)
 
